# EngineeringAssistant

./: CMakeLists.txt  EngineeringAssistant.pro  README.md
.github/workflows/: EngineeringAssistant.yml
data/knowledge/processes/: drawing_review.md
data/knowledge/standards/: GB_T_14689.md
data/skills/drawing-dimension-check/: skill.json
data/skills/drawing-review/: skill.json
data/skills/standard-query/: skill.json
docs/: 01-领域模型设计.md  02-系统架构设计.md  03-技术方案设计.md  04-需求与概要设计.md  06-详细设计.md  项目总结.md
src/: main.cpp
src/application/services/: chat_app_service.cpp  chat_app_service.h  kb_app_service.cpp  kb_app_service.h  skill_app_service.cpp  skill_app_service.h
src/domain/chat/models/: chat_session.cpp  chat_session.h  message.cpp  message.h  message_id.h  message_type.h  session_id.h
src/domain/chat/repositories/: chat_session_repository.h
src/domain/chat/services/: chat_processor.cpp  chat_processor.h
src/domain/common/: exceptions.h
src/domain/knowledge/models/: chunk.h  document.cpp  document.h  document_id.h  knowledge_base.cpp  knowledge_base.h  knowledge_id.h  knowledge_type.h
src/domain/knowledge/repositories/: knowledge_base_repository.h
src/domain/knowledge/services/: knowledge_loader.cpp  knowledge_loader.h
src/domain/rendering/models/: render_result.h
src/domain/rendering/services/: markdown_renderer.h
src/domain/skill/interfaces/: skill_interface.h
src/domain/skill/models/: execute_result.h  skill_id.h  skill_meta.h  skill_param.h  skill_registry.cpp  skill_registry.h  skill_status.h
src/domain/skill/services/: skill_executor.cpp  skill_executor.h
src/infrastructure/rendering/: simple_markdown_renderer.cpp  simple_markdown_renderer.h
src/infrastructure/skill/: builtin_skills.cpp  builtin_skills.h  skill_loader.cpp  skill_loader.h
src/presentation/: chat_widget.cpp  chat_widget.h  kb_panel.cpp  kb_panel.h  main_window.cpp  main_window.h  skill_panel.cpp  skill_panel.h
